--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,5 +1,13 @@
-upstream nothing {
+upstream gsupstream {
 	server geoserver:8080;
+}
+
+upstream flupstream {
+	server flower:8040;
+}
+
+upstream gnupstream {
+	server gunicorn:8060;
 }
 
 server {
@@ -7,8 +15,20 @@ server {
 
 	server_name localhost;
 
-	location / {
-		proxy_pass http://nothing;
+	location /static/ {
+	    alias /static/;
+	}
+
+	location /his {
+		proxy_pass http://gnupstream;
+	}
+
+	location /geoserver {
+		proxy_pass http://gsupstream;
+	}
+
+	location /flower {
+		proxy_pass http://flupstream;
 	}
 
     proxy_connect_timeout       3605;
