--- a/hs_data_services/environment.yml
+++ b/hs_data_services/environment.yml
@@ -1,18 +1,20 @@
-name: data_services
+name: hs_data_services
 
 channels:
   - conda-forge
 
 dependencies:
   - python=3.8
+  - psycopg2=2.8.4
   - gunicorn=20.0.4
+  - lxml
 
   - pip:
     - celery==4.4.4
     - django==3.0.1
+    - django-cors-headers==3.2.1
     - django-celery-beat==2.0.0
     - djangorestframework==3.11.0
     - drf-yasg==1.17.0
     - redis==3.5.3
-    - requests==2.22.0
-    - python-dateutil==2.8.1
+    - future==0.18.2
