--- a/hs_data_services/hs_data_services/local_settings.template
+++ b/hs_data_services/hs_data_services/local_settings.template
@@ -18,7 +18,7 @@ BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
 
-ALLOWED_HOSTS = [{{HYDROSHARE_HOST_URL}}, 'gnupstream', 'localhost', '127.0.0.1']    # e.g. "hydroshare.org"
+ALLOWED_HOSTS = [{{HYDROSHARE_DOMAIN}}, 'gnupstream', 'localhost', '127.0.0.1']    # e.g. "hydroshare.org"
 
 # Quick-start development settings - unsuitable for production
 # See https://docs.djangoproject.com/en/3.0/howto/deployment/checklist/
@@ -59,6 +59,6 @@ DATA_SERVICES = {
         'USER': {{GEOSERVER_USERNAME}},
         'PASSWORD': {{GEOSERVER_PASSWORD}},
         'IRODS_DIR': {{IRODS_LOCAL_DIRECTORY}},   # e.g. "/projects/hydroshare/vaults/hydrotest/home/betaDataProxy"
-        'NAMESPACE': {{GEOSERVER_NAMESPACE}}      # e.g. "HS"
+        'NAMESPACE': {{WORKSPACE_PREFIX}}         # e.g. "HS"
     }
 }
