Added SSL settings

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -12,7 +12,6 @@ upstream gnupstream {
 
 server {
 	listen 80;
-
 	server_name localhost;
 
 	location /static/ {
@@ -38,3 +37,60 @@ server {
     keepalive_timeout           3605;
 
 }
+
+# server {
+#     listen 80;
+#     server_name localhost;
+
+#     return 301 https://$server_name$request_uri;
+# }
+
+# server {
+#     listen 443 ssl;
+#     server_name localhost;
+
+#     charset utf-8;
+#     client_max_body_size 2048M;
+
+#     ssl on;
+#     ssl_certificate /opt/hs-certs/star_hydroshare_org.pem;
+#     ssl_certificate_key /opt/hs-certs/star_hydroshare_org.key;
+#     ssl_session_cache shared:SSL:20m;
+#     ssl_session_timeout 10m;
+#     ssl_prefer_server_ciphers on;
+#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#     ssl_ciphers ;
+
+#     add_header Strict-Transport-Security "max-age=31536000";
+
+#     location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
+
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_read_timeout 600s;
+
+# 	location /static/ {
+# 	    alias /static/;
+# 	}
+
+# 	location /his {
+# 		proxy_pass http://gnupstream;
+# 	}
+
+# 	location /geoserver {
+# 		proxy_pass http://gsupstream;
+# 	}
+
+# 	location /flower {
+# 		proxy_pass http://flupstream;
+# 	}
+
+#     proxy_connect_timeout       3605;
+#     proxy_send_timeout          3605;
+#     proxy_read_timeout          3605;
+#     send_timeout                3605;
+#     keepalive_timeout           3605;
+
+# }
