simplify port selection

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 HYDROSHARE_DOMAIN=localhost
 SECRET_KEY=secret
-DATA_SERVICES_URL=http://localhost:8080/his
-HYDROSHARE_REST_URL=http://localhost:8000/hsapi
-GEOSERVER_REST_URL=http://localhost:8080/geoserver/rest
+DATA_SERVICES_PORT=8090
+HS_PORT=8000
+DATA_SERVICES_URL=http://localhost:${DATA_SERVICES_PORT}/his
+HYDROSHARE_REST_URL=http://localhost:${HS_PORT}/hsapi
+GEOSERVER_REST_URL=http://localhost:${DATA_SERVICES_PORT}/geoserver/rest
 GEOSERVER_USERNAME=admin
 GEOSERVER_PASSWORD=geoserver
 IRODS_LOCAL_DIRECTORY=/tmp
 WORKSPACE_PREFIX=HS
-DATA_SERVICES_PORT=8080
