host.docker.internal

--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-HYDROSHARE_DOMAIN=localhost
-SECRET_KEY=secret
+# For local builds, use "host.docker.internal" instead of "localhost" or "127.0.0.1"
+HYDROSHARE_DOMAIN=host.docker.internal
+DATA_SERVICES_DOMAIN=host.docker.internal
 DATA_SERVICES_PORT=8090
 HS_PORT=8000
-DATA_SERVICES_URL=http://localhost:${DATA_SERVICES_PORT}/his
-HYDROSHARE_REST_URL=http://localhost:${HS_PORT}/hsapi
-GEOSERVER_REST_URL=http://localhost:${DATA_SERVICES_PORT}/geoserver/rest
+DATA_SERVICES_URL=http://${DATA_SERVICES_DOMAIN}:${DATA_SERVICES_PORT}/his
+HYDROSHARE_REST_URL=http://${HYDROSHARE_DOMAIN}:${HS_PORT}/hsapi
+GEOSERVER_REST_URL=http://${DATA_SERVICES_DOMAIN}:${DATA_SERVICES_PORT}/geoserver/rest
 GEOSERVER_USERNAME=admin
 GEOSERVER_PASSWORD=geoserver
+SECRET_KEY=secret
 IRODS_LOCAL_DIRECTORY=/tmp
 WORKSPACE_PREFIX=HS
