--- a/hs_data_services/hs_data_services/local_settings.template
+++ b/hs_data_services/hs_data_services/local_settings.template
@@ -44,7 +44,7 @@ DATABASES = {
 STATIC_URL = '/static/his/'
 STATIC_ROOT = '/static/his/'
 
-PROXY_BASE_URL = config.get('DATA_SERVICES_URL', 'http://localhost:8090/his')             # e.g. "https://geoserver-beta.hydroshare.org/his"
+PROXY_BASE_URL = config.get('DATA_SERVICES_URL', 'http://host.docker.internal:8090/his')             # e.g. "https://geoserver-beta.hydroshare.org/his"
 
 # Celery settings
 
@@ -52,14 +52,14 @@ CELERY_BROKER_URL = "redis://redis:6379/0"
 CELERY_BEAT_SCHEDULE = {}
 
 # HydroShare Data Services Connection settings
-HYDROSHARE_URL = config.get('HYDROSHARE_REST_URL', 'http://localhost:8000/hsapi')         # e.g. "https://beta.hydroshare.org/hsapi"
+HYDROSHARE_URL = config.get('HYDROSHARE_REST_URL', 'http://host.docker.internal:8000/hsapi')         # e.g. "https://beta.hydroshare.org/hsapi"
 
 DATA_SERVICES = {
     'geoserver': {
-        'URL': config.get('GEOSERVER_REST_URL', 'http://localhost:8090/geoserver/rest'),  # e.g. "https://geoserver-beta.hydroshare.org/geoserver/rest"
+        'URL': config.get('GEOSERVER_REST_URL', 'http://host.docker.internal:8090/geoserver/rest'),  # e.g. "https://geoserver-beta.hydroshare.org/geoserver/rest"
         'USER': config.get('GEOSERVER_USERNAME', 'admin'),
         'PASSWORD': config.get('GEOSERVER_PASSWORD', 'geoserver'),
-        'IRODS_DIR': config.get('IRODS_LOCAL_DIRECTORY', '/tmp'),                         # e.g. "/projects/hydroshare/vaults/hydrotest/home/betaDataProxy"
-        'NAMESPACE': config.get('WORKSPACE_PREFIX', 'HS')                                 # e.g. "HS"
+        'IRODS_DIR': config.get('IRODS_LOCAL_DIRECTORY', '/tmp'),                                    # e.g. "/projects/hydroshare/vaults/hydrotest/home/betaDataProxy"
+        'NAMESPACE': config.get('WORKSPACE_PREFIX', 'HS')                                            # e.g. "HS"
     }
 }
