--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,12 @@ services:
       - 5432:5432
 
   geoserver:
-    image: oscarfonts/geoserver:2.14.1
+    image: kartoza/geoserver:2.22.0
     environment: 
-      - CUSTOM_UID=${IRODS_ACCESS_UID:-501}                                # A user ID on the host with read permissions to the iRODS directory
-      - GEOSERVER_CSRF_WHITELIST=${HYDROSHARE_DOMAIN:-hydroshare.org}    # e.g. hydroshare.org
+      - GEOSERVER_UID=${IRODS_ACCESS_UID:-501}                                # A user ID on the host with read permissions to the iRODS directory
+      - HTTP_PORT=8080
+      - HTTP_PROXY_PORT=${DATA_SERVICES_PORT:-8090}
+      - HTTP_PROXY_NAME=${DATA_SERVICES_DOMAIN}
     volumes:
       - geoserver_volume:/var/local/geoserver
       - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh  # Overwrite the default startup script to allow anonymous GET access
