fix geoserver redirect

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # For local builds, use "host.docker.internal" instead of "localhost" or "127.0.0.1"
-HYDROSHARE_DOMAIN=host.docker.internal
-DATA_SERVICES_DOMAIN=host.docker.internal
+HYDROSHARE_DOMAIN=localhost
+DATA_SERVICES_DOMAIN=localhost
 DATA_SERVICES_PORT=8090
 HS_PORT=8000
 DATA_SERVICES_URL=http://${DATA_SERVICES_DOMAIN}:${DATA_SERVICES_PORT}/his
