--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     build: .
     command: /usr/bin/supervisord -c /home/dsuser/conf/gunicorn/gunicorn.conf
     volumes:
-      - static:/static                                        # Static files will be stored locally at root.
+      - static:/static
       - "./hs_data_services:/home/dsuser/hs_data_services"
     depends_on:
       - postgres
@@ -72,7 +72,7 @@ services:
       - ${DATA_SERVICES_PORT:-8090}:80                              # Expose all services locally on port
     volumes:
       - ./conf/nginx:/etc/nginx/conf.d
-      - static:/static                                        # Static files will be stored locally at root.
+      - static:/static
       #- /opt/hs-certs:/opt/hs-certs                            # Used to configure SSL if available.
     depends_on:
       - gunicorn
