--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - 5432:5432
     networks:
       - data_services_network
+    restart: unless-stopped
 
   geoserver:
     image: oscarfonts/geoserver:2.14.1
@@ -26,11 +27,13 @@ services:
       - /projects:/projects:ro                                 # Mount projects as a read-only volume to grant access to resources
     networks:
       - data_services_network
+    restart: unless-stopped
 
   redis:
     image: redis:6.0.4-alpine
     networks:
       - data_services_network
+    restart: unless-stopped
 
   flower:  
     image: mher/flower:0.9.5
@@ -42,6 +45,7 @@ services:
       - data_services_network
     depends_on:
       - redis
+    restart: unless-stopped
 
   gunicorn:
     build: .
@@ -52,6 +56,7 @@ services:
       - data_services_network
     depends_on:
       - postgres
+    restart: unless-stopped
 
   celery-worker:
     build: .
@@ -61,6 +66,7 @@ services:
     depends_on:
       - redis
       - postgres
+    restart: unless-stopped
 
   celery-beat:
     build: .
@@ -71,6 +77,7 @@ services:
       - redis
       - celery-worker
       - postgres
+    restart: unless-stopped
 
   nginx:
     image: nginx:1.19
@@ -86,6 +93,7 @@ services:
       - gunicorn
       - geoserver
       - flower
+    restart: unless-stopped
 
 
 networks:
