--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -58,8 +58,8 @@ server {
 #     ssl_session_cache shared:SSL:20m;
 #     ssl_session_timeout 10m;
 #     ssl_prefer_server_ciphers on;
-#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-#     ssl_ciphers ;
+#     ssl_protocols TLSv1.2 TLSv1.3
+#     ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 
 #     add_header Strict-Transport-Security "max-age=31536000";
 
