--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
       - HTTP_PROXY_NAME=${DATA_SERVICES_DOMAIN}
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_PASSWORD:-geoserver}
       - GEOSERVER_ADMIN_USER=${GEOSERVER_USERNAME:-admin}
+      - CATALINA_OPTS=-server -Djava.awt.headless=true 	-Xms2g -Xmx10g -XX:+UseConcMarkSweepGC -XX:NewSize=48m 	-DGEOSERVER_DATA_DIR=/var/local/geoserver
+      # https://github.com/oscarfonts/docker-geoserver/blob/master/2.24.1/Dockerfile#L35-L37
+      # https://docs.geoserver.org/main/en/user/production/container.html
     volumes:
       - geoserver_volume:/var/local/geoserver
       - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh  # Overwrite the default startup script to allow anonymous GET access
