--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,16 @@ services:
   geoserver:
     image: oscarfonts/geoserver:2.24.1
     environment: 
-      - CUSTOM_UID={{IRODS_ACCESS_UID}}                        # A user ID on the host with read permissions to the iRODS directory
-      - GEOSERVER_CSRF_WHITELIST={{HYDROSHARE_DOMAIN}}         # e.g. hydroshare.org
-      - CATALINA_OPTS=-server -Djava.awt.headless=true 	-Xms2g -Xmx10g -XX:+UseConcMarkSweepGC -XX:NewSize=48m 	-DGEOSERVER_DATA_DIR=/var/local/geoserver
+      - CUSTOM_UID={{IRODS_ACCESS_UID}}                              # A user ID on the host with read permissions to the iRODS directory
+      - GEOSERVER_CSRF_WHITELIST={{HYDROSHARE_DOMAIN}}               # e.g. hydroshare.org
+      - CATALINA_OPTS=-server -Djava.awt.headless=true -Xms2g -Xmx10g -XX:NewSize=48m -DGEOSERVER_DATA_DIR=/var/local/geoserver
       # https://github.com/oscarfonts/docker-geoserver/blob/master/2.24.1/Dockerfile#L35-L37
       # https://docs.geoserver.org/main/en/user/production/container.html
     volumes:
       - geoserver_volume:/var/local/geoserver
-      - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh  # Overwrite the default startup script to allow anonymous GET access
-      - /projects:/projects:ro                                 # Mount projects as a read-only volume to grant access to resources
+      - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh        # Overwrite the default startup script to allow anonymous GET access
+      - /projects:/projects:ro                                       # Mount projects as a read-only volume to grant access to resources
+      # - ./conf/geoserver/setenv.sh:/usr/local/tomcat/bin/setenv.sh # Mount custom JVM variables, disabled in favor of CATALINA_OPTS above
     networks:
       - data_services_network
     restart: unless-stopped
