--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - POSTGRES_DB=hs_data_services
     volumes:
       - data_services_volume:/var/lib/postgresql/data/
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432                                            # Please don't open this port to the outside world.
     networks:
       - data_services_network
     restart: unless-stopped
@@ -26,8 +26,9 @@ services:
       # https://docs.geoserver.org/main/en/user/production/container.html
     volumes:
       - geoserver_volume:/var/local/geoserver
-      - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh        # Overwrite the default startup script to allow anonymous GET access
-      - /projects:/projects:ro                                       # Mount projects as a read-only volume to grant access to resources
+      - ./conf/geoserver/geoserver.sh:/usr/local/bin/start.sh  # Overwrite the default startup script to allow anonymous GET access
+      # must be kept in sync with GEOSERVER_DATA_DIR in local_settings.py
+      - /mnt/geoserver_resources:/geoserver_resources:ro
       # - ./conf/geoserver/setenv.sh:/usr/local/tomcat/bin/setenv.sh # Mount custom JVM variables, disabled in favor of CATALINA_OPTS above
     networks:
       - data_services_network
@@ -55,7 +56,7 @@ services:
     build: .
     command: /usr/bin/supervisord -c /home/dsuser/conf/gunicorn/gunicorn.conf
     volumes:
-      - /static:/static                                        # Static files will be stored locally at root.
+      - static_volume:/static                                  # Static files will be stored in a docker volume.
     networks:
       - data_services_network
     depends_on:
@@ -70,6 +71,8 @@ services:
     depends_on:
       - redis
       - postgres
+    volumes:
+      - /mnt/geoserver_resources:/geoserver_resources
     restart: unless-stopped
 
   celery-beat:
@@ -86,10 +89,11 @@ services:
   nginx:
     image: nginx:1.19
     ports:
-      - 8000:80                                                # Expose all services locally on port 8000
+      - 80:80
+      - 443:443
     volumes:
       - ./conf/nginx:/etc/nginx/conf.d
-      - /static:/static                                        # Static files will be stored locally at root.
+      - static_volume:/static                                  # Static files will be stored in a docker volume.
       #- /opt/hs-certs:/opt/hs-certs                            # Used to configure SSL if available.
     networks:
       - data_services_network
@@ -108,3 +112,4 @@ networks:
 volumes:
   data_services_volume:
   geoserver_volume:
+  static_volume:
