--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,6 +38,8 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
+	 error_page 404 /404.html;
+
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
