Refactor nginx.conf to remove unnecessary error_page directive and improve proxy_pass configuration for /geoserver

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,6 +38,10 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
+	 location = /404.html {
+		root /;
+	 }
+
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
