Refactor nginx.conf to remove unnecessary error_page directive and improve proxy_pass configuration for /geoserver

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -41,6 +41,14 @@ upstream gnupstream {
 	 location = /404.html {
 		root /;
 	 }
+	 
+	 error_page 404 /custom_404.html;
+
+	 location = /custom_404.html {
+		root /usr/share/nginx/html;
+		internal;
+	 }
+
 
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
@@ -57,7 +65,6 @@ upstream gnupstream {
      }
 
      location /geoserver {
-		error_page 404 /404.html;
         proxy_pass http://gsupstream;
      }
 
