--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -37,11 +37,10 @@ upstream gnupstream {
      add_header Strict-Transport-Security "max-age=31536000";
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
-	 
-	 error_page 404 /custom_404.html;
 
-	 location = /custom_404.html {
+	 location @fallback {
 		root /usr/share/nginx/html;
+		try_files '' /custom_404.html =404;
 		internal;
 	 }
 
@@ -61,6 +60,7 @@ upstream gnupstream {
      }
 
      location /geoserver {
+		error_page 404 @fallback;
         proxy_pass http://gsupstream;
      }
 
