Refactor nginx.conf to remove unnecessary error_page directive and improve proxy_pass configuration for /geoserver

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,12 +38,6 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
-	 location @fallback {
-		root /usr/share/nginx/html;
-		try_files '' /custom_404.html =404;
-	 }
-
-
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,7 +53,8 @@ upstream gnupstream {
      }
 
      location /geoserver {
-		error_page 404 @fallback;
+		root /usr/share/nginx/html;
+		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
 
