Refactor nginx.conf to remove unnecessary error_page directive and improve proxy_pass configuration for /geoserver

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -37,6 +37,14 @@ upstream gnupstream {
      add_header Strict-Transport-Security "max-age=31536000";
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
+	 
+	 error_page 404 /custom_404.html;
+
+	 location = /custom_404.html {
+		root /usr/share/nginx/html;
+		internal;
+	 }
+
 
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
@@ -53,8 +61,6 @@ upstream gnupstream {
      }
 
      location /geoserver {
-		root /usr/share/nginx/html;
-		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
 
