--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -39,6 +39,7 @@ upstream gnupstream {
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 	 
 	 error_page 404 /custom_404.html;
+	 proxy_intercept_errors on;
 
 	 location = /custom_404.html {
 		root /usr/share/nginx/html;
