Refactor nginx.conf to remove unnecessary error_page directive and improve proxy_pass configuration for /geoserver

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,10 +38,7 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
-	 proxy_intercept_errors on;
-	 error_page 404 /custom_404.html;
-
-	 location = /custom_404.html {
+	 location = @custom_404 {
 		root /usr/share/nginx/html;
 		internal;
 	 }
@@ -63,7 +60,7 @@ upstream gnupstream {
 
      location /geoserver {
 		proxy_intercept_errors on;
-		error_page 404 /custom_404.html;
+		error_page 404 @custom_404;
         proxy_pass http://gsupstream;
      }
 
