--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,7 +38,10 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
-	 location = @custom_404 {
+	 proxy_intercept_errors on;
+	 error_page 404 /custom_404.html;
+
+	 location = /custom_404.html {
 		root /usr/share/nginx/html;
 		internal;
 	 }
@@ -60,7 +63,7 @@ upstream gnupstream {
 
      location /geoserver {
 		proxy_intercept_errors on;
-		error_page 404 @custom_404;
+		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
 
