Add custom 404 page for missing geoserver resources

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -38,6 +38,13 @@ upstream gnupstream {
 
      location /robots.txt {return 200 "User-agent: *\nDisallow: /\n";}
 
+
+	 location = /custom_404.html {
+		root /usr/share/nginx/html;
+		internal;
+	 }
+
+
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -53,6 +60,8 @@ upstream gnupstream {
      }
 
      location /geoserver {
+		proxy_intercept_errors on;
+		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
 
