--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -10,29 +10,11 @@ upstream gnupstream {
 	server gunicorn:8060;
 }
 
-# server {
-#     listen 80;
-#     server_name localhost;
-#
-#     return 301 https://$server_name$request_uri;
-# }
-
  server {
-     #listen 443 ssl;
-     listen 80;
-     server_name localhost
+     listen 80 default_server;
 
      charset utf-8;
      client_max_body_size 2048M;
-
-     #ssl on;
-     #ssl_certificate /opt/hs-certs/star_hydroshare_org.pem;
-     #ssl_certificate_key /opt/hs-certs/star_hydroshare_org.key;
-     #ssl_session_cache shared:SSL:20m;
-     #ssl_session_timeout 10m;
-     #ssl_prefer_server_ciphers on;
-     #ssl_protocols TLSv1.2 TLSv1.3;
-     #ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
 
      add_header Strict-Transport-Security "max-age=31536000";
 
