--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,12 @@ services:
     restart: unless-stopped
 
   geoserver:
-    image: oscarfonts/geoserver:2.24.1
+    image: oscarfonts/geoserver:2.24.5
     environment: 
       - CUSTOM_UID={{IRODS_ACCESS_UID}}                              # A user ID on the host with read permissions to the iRODS directory
       - GEOSERVER_CSRF_WHITELIST={{HYDROSHARE_DOMAIN}}               # e.g. hydroshare.org,hydroshare.io: https://docs.geoserver.org/latest/en/user/security/webadmin/csrf.html
       - CATALINA_OPTS=-server -Djava.awt.headless=true -Xms2g -Xmx10g -XX:NewSize=48m -DGEOSERVER_DATA_DIR=/var/local/geoserver
+      # - GEOSERVER_CORS_ALLOWED_ORIGINS=*
       # https://github.com/oscarfonts/docker-geoserver/blob/master/2.24.1/Dockerfile#L35-L37
       # https://docs.geoserver.org/main/en/user/production/container.html
     volumes:
