--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -46,6 +46,14 @@ upstream gnupstream {
 		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
+       location ~* /geoserver/(.*)/wfs/ {
+         set $delimeter "";
+         if ($is_args) {
+            set $delimeter "&";
+         }
+         set $args "$args${delimeter}service=wfs";
+         proxy_pass http://gsupstream;
+       }
 
      location /flower {
         proxy_pass http://flupstream;
