Refine regex pattern for WFS location in nginx configuration

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -46,7 +46,7 @@ upstream gnupstream {
 		error_page 404 /custom_404.html;
         proxy_pass http://gsupstream;
      }
-       location ~* /geoserver/(.*)/wfs/(.*) {
+       location ~* ^/geoserver/[^/]+/wfs/?(\?.*)?$ {
          set $args $args;
          set $delimeter "";
          if ($is_args) {
